2010-06-26 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk:
	  WIN32 regression tests with wine on mingw cross-compiled sdcc

2010-04-13 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh:
	  don't repeat the checkout if completed succesfully

2010-04-12 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh:
	  try 3 times to checkout, before give up

2010-04-06 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh:
	  fixed

2010-04-04 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh:
	  BSD find doesn't understand -mmin

2010-04-03 Borut Razem <borut.razem AT siol.net>

	* local/netbsd-i386.mk, local/dev.mk, local/solaris-x86.mk,
	  local/mypants.mk, local/freebsd-i386.mk: added
	* lib/fetch.mk: adde quotes to test -z argument
	* sdcc-build-bootstrap.sh, lib/upload.mk: use `` instead $():
	  solaris make make doesn't understand $()

2010-02-29 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh, lib/fetch.mk:
	  adopted for /bin/sh (Bourne shell)

2010-02-25 Borut Razem <borut.razem AT siol.net>

	* sdcc-build/lib/bootstrap.mk:
	  convert as2gbmap to a Windowd batch script if mingw crosscompiling

2010-02-24 Borut Razem <borut.razem AT siol.net>

	* sdcc-build/lib/bootstrap.mk: convert as2gbmap.py to an executable

2010-01-16 Borut Razem <borut.razem AT siol.net>

	* sdcc-build/lib/bootstrap.mk, sdcc-build/lib/doc-archive.mk:
	  as/ renamed to sdas/

2009-12-29 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh: removed superfluous $

2009-12-04 Borut Razem <borut.razem AT siol.net>

	* lib/send-mail.mk, lib/bootstrap.mk:
	  removed per target logging, send-mail target is noop
	* sdcc-build-bootstrap.sh:
	  removed HOMEBUILD since it is the same as BUILDROOT
	* components/sdcc.mk, lib/variables.mk:
	  removed per target configure logging

2009-10-12 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: search makensis in standard locations if