@@ -1,3 +1,8 @@
+2010-06-27 Borut Razem <borut.razem AT siol.net>
+
+	* components/sdcc.mk:
+	  created rule sdcc-regression-win32
+
 2010-06-26 Borut Razem <borut.razem AT siol.net>
 
 	* components/sdcc.mk:
